# StellarCartographer

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
Query/: CMakeLists.txt  main.cpp
StellarCartography/: Algorithms.cpp  Algorithms.h  All.h  CMakeLists.txt  Coordinate.cpp  Coordinate.h  Jump.cpp  Jump.h  NeighborMap.cpp  NeighborMap.h  NeighborMapGraphTraits.cpp  NeighborMapGraphTraits.h  SpatialIndex.cpp  SpatialIndex.h  Star.cpp  Star.h  StarMap.cpp  StarMap.h
UnitTests/: AlgorithmTests.cpp  CMakeLists.txt  CoordinateTests.cpp  NeighborMapTests.cpp  SpatialIndexTests.cpp  StarMapTests.cpp  StarTests.cpp  TestMain.cpp  Tests.cpp  Tests.h
